Next version

Changed: Winner screen can be left with 3rd joystick button (#2121895).
Changed: Parameter --use-appdata-dir replaced by --ignore-home-dir on Linux. On Windows it's still --use-appdata-dir.


----------------------------


Version 1.4

Released on October 18, 2008

New feature: Bombs can be remotely fused by a bomber (by Jerome Bigot, revision 527, #2122157) including AI support (by Markus Drescher, revision 536).
New feature: AI bomber is punching bombs when he is jammed by a bomb and picked up the punch item (by Markus Drescher).
New feature: Bombermaaan can be compiled natively on Linux using G++ (without the need of Wine and the Bombermaaan files for Win32, thanks to Markus Drescher, revision 533).
New feature: AI support for the blue glove - the AI players can throw bombs now (by Markus Drescher, revision 536).
New feature: Levels may have remote fused bombs (can also be set in level file version 2).
Changed: FMOD was replaced by the SDL_mixer library (by Markus Drescher, revision 533).
Changed: When no config file is present the input for the second player is set to keyboard 2 (revision 547).
Changed: Bigger sprites in menu level preview in 32-pixels version (revision 542).
Changed: F1 and F2 keys don't switch to fullscreen mode in 32-pixels version since the screen resolution is too low and the graphics cannot be seen completely.
Changed: Configuration file stored in XML format, config.xml (#2121910). The old file config.dat is still read for easy migration (this feature will be removed in the future).
Changed: Bots "know" which bomb is ignited by another bomb.
Changed: Algorithm for bots choosing the best block to escape / defend theirselves.
Changed: Keyboard 3 to 5 as human input available now. Useful if you don't have joysticks (#2150405).
Changed: Using SimpleIni for reading version-2 level files. The level files can be treated as real INI files now.
Changed: Arrows are displayed in level preview now (where bombs start moving, #2153008).